MD 10 culminado